# rubin

./: .gitignore  pyproject.toml
src/rubin/: __init__.py  cli.py  dsp.py  lufs.py  process.py
src/rubin/chains/: __init__.py  guitar.py  master.py  vocal.py
src/rubin/presets/: __init__.py  analog_console.py  base.py  lofi.py  tape.py
tests/: test_chains.py  test_dsp.py  test_lufs.py
