[project]
name = "rubin"
version = "0.1.0"
description = "Headless music mastering system for acoustic vocal + guitar"
requires-python = ">=3.11"
dependencies = [
    "pedalboard>=0.9.15",
    "pyloudnorm>=0.1.1",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
]

[project.scripts]
rubin = "rubin.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rubin"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]
